fix alignment

--- a/css/hmenu.css
+++ b/css/hmenu.css
@@ -2,5 +2,9 @@
 .hmenu ul { /* padding-left: 1em; margin-left: 0; */ }
 .hmenu-item { }
 .hmenu-submenu { }
-.hmenu-bullet, .hmenu-bullet-nochildren { float: left; margin-right: 0.5em;}
+.hmenu-bullet, .hmenu-bullet-nochildren {
+  float: left; 
+  width: 1.3em;
+  text-align: center;
+}
 .hmenu-bullet {cursor: pointer;}
